--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <!-- Header & Navigation -->
-    <section class="header-section">
+    <header class="header-section">
         <!-- navigation -->
         <nav class="navigation-container">
             <div class="logo-container">
-                <img src="./assets/logo.svg" alt="3zero-club-logo">
+                <img src="./assets/logo.svg" alt="3zero-club-brand">
             </div>
             <div class="menu-container">
                 <ul>
@@ -23,7 +23,7 @@
                     <li><a href="/">About</a></li>
                     <li><a href="/">Events</a></li>
                     <li><a href="/">Register</a></li>
-                    <li><button>3zero global centre</button></li>
+                    <li><button>3Z global centre</button></li>
                 </ul>
             </div>
         </nav>
@@ -45,7 +45,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </header>
     <!-- registration section -->
     <section class="registration-bar mb-5">
         <div class="registration-bar-content d-flex align-items-center justify-content-center">
@@ -76,5 +76,91 @@
             </div>
         </div>
     </section>
+    <!-- events summary -->
+    <section class="event-summary-collection">
+        <div class="event-summary-collection-cards d-flex justify-content-center align-items-center">
+            <div class="event-summary-collection-card-details">
+                <div class="event-summary-collection-card-details-header">
+                    <h6>Latest</h6>
+                    <h4>social business and 3zero club events</h4>
+                </div>
+                <div class="row event-summary-collection-card-details-main pt-4">
+                    <div class="col-md-4">
+                        <img src="./assets/event-1.png" alt="event-one">
+                        <h6>social business design competition</h6>
+                        <a href="/">learn more <i class="fas fa-chevron-right"></i></a>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="./assets/event-2.png" alt="event-one">
+                        <h6>social fiction design competition</h6>
+                        <a href="/">learn more <i class="fas fa-chevron-right"></i></a>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="./assets/event-3.png" alt="event-one">
+                        <h6>social business day</h6>
+                        <a href="/">learn more <i class="fas fa-chevron-right"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="events-register d-flex justify-content-center align-items-center">
+            <div class="d-flex justify-content-between align-items-center events-register-content">
+                <p>Build networks, take actions and unfold yourself as a powerful force <br> to create a world of three zeros.
+                </p>
+                <button>register now</button>
+            </div>
+        </div>
+    </section>
+    <!-- footer -->
+    <footer class="footer-section d-flex justify-content-center align-items-center">
+        <div class="footer-main">
+            <div class="row d-flex align-items-center">
+                <div class="col-md-5">
+                    <img src="./assets/logo-white.svg" alt="brand-white">
+                    <div class="footer-logo-content">
+                        <p>
+                            The 3ZERO Club is an initiative towards achieving the Nobel Peace Laureate Professor Muhammad Yunus’s vision
+                            of creating a world of three zeros — zero net carbon emission, zero wealth concentration for ending poverty,
+                            and zero unemployment by unleashing entrepreneurship in all.
+                        </p>
+                        <p class="pt-3">© 2021. Yunus Centre. All Rights Reserved. </p>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <div class="footer-menu">
+                        <ul>
+                            <li><a href="/">Home</a></li>
+                            <li><a href="/">About</a></li>
+                            <li><a href="/">Events</a></li>
+                            <li><a href="/">Register</a></li>
+                            <li><a href="/">Sign in</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-5">
+                    <div class="footer-social-content">
+                        <ul class="mt-5">
+                            <li><a href="" class="facebook"><i class="fab fa-facebook-f"></i></a></li>
+                            <li><a href="" class="insta"><i class="fab fa-instagram"></i></a></li>
+                            <li><a href="" class="twitter"><i class="fab fa-twitter"></i></a></li>
+                            <li><a href="" class="youtube"><i class="fab fa-youtube"></i></a></li>
+                            <li><a href="" class="linked"><i class="fab fa-linkedin-in"></i></a></li>
+                        </ul>
+                        <div class="mt-5">
+                            <p>EXO<br>
+                                3Z Global Centre<br>
+                                9th Floor, Grameen Telecom Bhaban,<br>
+                                Zoo Road, Mirpur, Dhaka-1216, Bangladesh
+                            </p>
+                            <p>Email: connect@3zero.Club</p>
+                        </div>
+                        <div class="pt-3">
+                            <p>Supported by Centre Yunus Paris and <br> Yunus and You – The YY Foundation</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
